correct footer position on mobile

--- a/pages/arrival/arrival.css
+++ b/pages/arrival/arrival.css
@@ -149,9 +149,6 @@ body {
     background-color: rgba(255, 166, 0, 0.816);
     padding: 20px;
     text-align: center;
-    position: absolute;
-    left: 0;
-    bottom: 0;
 }
 
 .footer__links {
