--- a/pages/certificate/certificate.css
+++ b/pages/certificate/certificate.css
@@ -138,9 +138,6 @@ body {
     background-color: rgba(0, 0, 254, 0.401);
     padding: 20px;
     text-align: center;
-    position: absolute;
-    left: 0;
-    bottom: 0;
 }
 
 .footer__links {
