--- a/pages/departure/departure.css
+++ b/pages/departure/departure.css
@@ -149,9 +149,6 @@ body {
     background-color: rgba(0, 128, 0, 0.649);
     padding: 20px;
     text-align: center;
-    position: absolute;
-    left: 0;
-    bottom: 0;
 }
 
 .footer__links {
