--- a/pages/insurance/insurance.css
+++ b/pages/insurance/insurance.css
@@ -142,9 +142,6 @@ body {
     background-color: rgb(234, 67, 53);
     padding: 20px;
     text-align: center;
-    position: absolute;
-    left: 0;
-    bottom: 0;
 }
 
 .footer__links {
