--- a/pages/visa/visa.css
+++ b/pages/visa/visa.css
@@ -139,9 +139,6 @@ body {
     background-color: #fde293;
     padding: 20px;
     text-align: center;
-    position: absolute;
-    left: 0;
-    bottom: 0;
 }
 
 .footer__links {
